<resources>
    <string name="all_unit_converter">Unit Converter</string>
    <string name="factor">Factor</string>
    <string name="binomial_newton">Newton Binomial Expansion</string>
    <string name="circle">Circle</string>
    <string name="circle_interaction">Secant of two circles</string>
    <string name="circle_tangent">Tangent of two circles</string>
    <string name="close">Close</string>
    <string name="collinear">Straight</string>
    <string name="column">columns</string>
    <string name="copied">Copied</string>
    <string name="create">Create</string>
    <string name="delete_desc">Erase</string>
    <string name="derivative">Derivative</string>
    <string name="error_input_num">Formatting error</string>
    <string name="error">Error</string>
    <string name="expand">Expand</string>
    <string name="factor_prime">Prime Factor</string>
    <string name="factor_polynomial">Factor Polynomial</string>
    <string name="ellipse">Ellipse</string>
    <string name="feedback">Feedback</string>
    <string name="gi_i_thi_u_v_calc">About Ncalc+</string>
    <string name="gi_tr_nh_nh_t">Smallest value</string>
    <string name="graph">Graph</string>
    <string name="help">Help</string>
    <string name="enter_expression">Enter expression</string>
    <string name="input_equation">Enter an equation:</string>
    <string name="inside">Inside</string>
    <string name="interaction">Intersecting</string>
    <string name="l_ch_chu_n">Standard deviation</string>
    <string name="vector">vector</string>
    <string name="title_activity_app_about">About NCalc+</string>
    <string name="title_activity_geometry">2D Cartesian Geometry</string>
    <string name="title_activity_graph">Graph</string>
    <string name="title_activity_matrix_calculator">Matrix</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_unit_converter_acitvity">Unit Converter</string>
    <string name="th_m_ph_ng_tr_nh">More</string>
    <string name="table">Statistical</string>
    <string name="t_ng">sum</string>
    <string name="speech_not_supported">Voice recognition is not supported</string>
    <string name="speak_expression">Read expressions</string>
    <string name="solve_system_equation">Solve a system of equations</string>
    <string name="solve_for_var">Solve equations with variables (x, y, z, …): </string>
    <string name="solve_equation">Solve Equation</string>
    <string name="simplify_expression">Simplify Expression</string>
    <string name="simplify">Simplify</string>
    <string name="settings">Setting</string>
    <string name="science_calculator">Scientific Calculator</string>
    <string name="row">rows</string>
    <string name="process">Handling</string>
    <string name="polygon">polygon</string>
    <string name="parallel">Parallel</string>
    <string name="outside">Outside</string>
    <string name="auto_process">Automatic data processing</string>
    <string name="line">Straight line</string>
    <string name="linear_system">Solve System of Equations</string>
    <string name="logic_calculator">Base-N Calculator</string>
    <string name="matrix">Matrix</string>
    <string name="matrix_op_inverse_a">Inverse A</string>
    <string name="matrix_op_inverse_b">Inverse B</string>
    <string name="matrix_op_tranpose_b">Trans B</string>
    <string name="matrix_op_tranpose_a">Trans A</string>
    <string name="maximum">The maximum value</string>
    <string name="more">More …</string>
    <string name="msg_delete_matrix">Creating a new matrix will delete the existing matrix. Are you sure?</string>
    <string name="nav_descartes">2D Geometry</string>
    <string name="nh_p_c_c_n_c_a_h">Enter the variables of the system of equations:</string>
    <string name="nh_p_d_li_u">Enter a value:</string>
    <string name="not_line">Not a straight line</string>
    <string name="not_interaction">No intersections</string>
    <string name="not_in_circle">None of the circle</string>
    <string name="nh_p_c_c_ph_ng_tr_nh_t_o_th_nh_h_ph">
        Enter equations to form a system of equations, then enter the equation system variables \n
        For example: press [plus] and enter the following equations: \n
         x + y + z = 2 \n
         x - y + 2z = 6 \n
         z + y = 2 \n
        Then enter the variables you are looking for: x, y, z \n
        Press [SOLVE]
    </string>
    <string name="nh_p_d_li_u_c_ch_nhau_b_i_d_u_ph_y_nv_d_12_232_43_4">Data entries separated by a comma (,) \n \ For example: 12, 232.43, 4</string>
    <string name="above_circle">Located on the circle</string>
    <string name="not_input_equation">Unknown equations</string>
    <string name="noFunDisp">There is no function to display</string>
    <string name="tapFun">Choose a function</string>
    <string name="save">Save</string>
    <string name="add_function">Add function</string>
    <string name="cannotwrite">Unable to write the file</string>
    <string name="not_variable">
        <![CDATA[
        No variable found </br>
        Please enter an equation with a variable x</br>
        Examples: 2x + 1 or 2x^2 + x - 2
        ]]>
    </string>
    <string name="history">History</string>
    <string name="pref_title_font">Font</string>
    <string name="pref_title_theme">Theme</string>
    <string name="solve">Solve</string>
    <string name="tangent">Tangent</string>
    <string name="translate">Translate</string>
    <string name="choose_mode">Select 2D or 3D graph mode</string>
    <string name="reason">Reason</string>
    <string name="math_error">Math error</string>
    <string name="add_equation">Add equation</string>
    <string name="remove_equation">Delete equation</string>
    <string name="enter_params">Enter the variables of the system of equations:</string>
    <string name="calc">Calc</string>
    <string name="enter_value">Enter value</string>
    <string name="name">Name</string>
    <string name="define_var">Define variable</string>
    <string name="graph_2">Graph</string>
    <string name="enter_limit">Enter limit</string>
    <string name="eval">Evaluate</string>
    <string name="input_limit">Input limit of function</string>
    <string name="limit">Find limit</string>
    <string name="rate_this_app">Rate app</string>
    <string name="integrate">Integrate</string>
    <string name="enter_function">Enter function</string>
    <string name="lower_limit">Lower limit</string>
    <string name="upper_limit">Upper limit</string>
    <string name="derivative_level">Derivative level</string>
    <string name="der_level_desc">Select derivative level here</string>
    <string name="input_der_here">Enter derivative functions needed in this line!</string>
    <string name="input_equation_here">Enter the equation needed to find the solution in this line!</string>
    <string name="input_expand_here">Enter the expression to expand in this line!</string>
    <string name="input_graph_here">Click here to add more functions</string>
    <string name="input_integrate_here">Enter the function to integrate on this line!</string>
    <string name="input_primitive_here">Enter the function to primitive on this line!</string>
    <string name="primitive">Primitive</string>
    <string name="limit_from_desc">Lower limit</string>
    <string name="push_analyze_button">Press this button to determine the factorization of polynomials, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_button_primitive">Then press the button to start the calculation, the calculation may take a long time for a first-time data initialization</string>
    <string name="push_der_button">Press this button to derivative function, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_expand_button">Click this button to expand the expression, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_integrate_button">Press this button to integrals, calculation process can take longer for a first-time data initialization</string>
    <string name="push_simplify_button">Press this button to shortened expression, the calculation process can take longer for a first-time data initialization</string>
    <string name="push_solve_button">Press this button to find root the equation, the calculation process can take longer for a first-time data initialization</string>
    <string name="input_analyze_here">Enter a polynomial to analyze in this line!</string>
    <string name="input_simplify_here">Enter the expression to simplify in this line!</string>
    <string name="limit_to_desc">Upper limit</string>
    <string name="ln_hint">
        <![CDATA[
<font color="red">Log(x) is the natural logarithm</font>
        ]]></string>
    <string name="analytics">Analytics</string>
    <string name="algebra">Algebra</string>
    <string name="language">Language</string>
    <string name="default_">System</string>
    <string name="probability_statistics">Probability statistics</string>
    <string name="combination">Combination</string>
    <string name="permutation">Permutation</string>
    <string name="module">Modulo</string>
    <string name="input_number">Enter number</string>
    <string name="enter_number">Enter number</string>
    <string name="trace_mode">Trace mode</string>
    <string name="not_a_number">The data entered is not a number!</string>
    <string name="gt_zero">Both numbers must be greater than zero.</string>
    <string name="number_theory">Number Theory</string>
    <string name="summary_trace_mode">Display how computers solve expressions</string>
    <string name="enter_variable">Enter variables here. Variables are separated by semicolons.</string>
    <string name="select_num_var">Select the number of variables</string>
    <string name="num_of_var">Number of variables</string>
    <string name="enter_coefficient">Enter coefficient here!</string>
    <string name="select_num_var_des">Number of variables in the system of equations need finding root.</string>
    <string name="enter_coeff_desc">
        Enter the coefficients of the equations. \n
        Example:\n
            2x + y = 0\n
            3x - 2y = 1\n
        Enter the coefficients:\n
            [1; 1; 0]\n
            [3, -2; 1]</string>
    <string name="enter_var_hint">Enter the variables of the system of equations</string>
    <string name="input_matrix">Input matrix</string>
    <string name="input_equation_">Input equation</string>
    <string name="precision_">Precision</string>
    <string name="calculator">Calculator</string>
    <string name="ui">User Interface</string>
    <string name="advance">Advanced</string>
    <string name="fraction_mode">Fraction mode</string>
    <string name="fraction_decs">Show 1/2 instead of 0.5</string>
    <string name="summary_instant_res">Automatically calculate results</string>
    <string name="instant_res">Instant results</string>
    <string name="not_find_root">Cannot find root of the equation.</string>
    <string name="no_root">This equation has no solution.</string>
    <string name="change_lang_msg">Please restart the app to apply the selected language.</string>
    <string name="latex_engine">LaTeX engine</string>
    <string name="tit_trig_expand">Trigonometry - Expand</string>
    <string name="tit_trig_reduce">Trigonometry - Reduce</string>
    <string name="tit_trig_to_exp">Trigonometry to Exponent</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="latex_summary">KaTeX is faster than MathJax on a mobile environment, but MathJax supports more features and is more beautiful.</string>
    <string name="close_drawer">Close drawer</string>
    <string name="catalan_number">Catalan Number</string>
    <string name="prime">Prime Number</string>
    <string name="fibonacci">Fibonacci Number</string>
</resources>