<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <HorizontalScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_solve"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/solve" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/graph" />


            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/factor" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/derivative" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/simplify" />


            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/expand" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/factor_prime"
                android:visibility="gone" />

        </LinearLayout>
    </HorizontalScrollView>
</FrameLayout>